syntax = "proto3";

option go_package = "v1";

import "api/v1/signal.proto";
import "google/protobuf/timestamp.proto";

package v1;

message ProcessIndicator {
    // A unique uuid for the Indicator message
    string id = 1;

    string deployment_id  = 2;
    string container_name = 3;
    string pod_id         = 4;

    // The emit timestamp of the message. Used for measuring latency
    google.protobuf.Timestamp emit_timestamp = 5;

    // A process signal message passed from Collector to Sensor
    ProcessSignal signal = 6;
}

// This is the unique key we store process indicators under in Bolt.
// This is stored in the DB, so please follow proto compatibility rules for it,
// OR discard existing values and repopulate it on startup.
message ProcessIndicatorUniqueKey {
    string pod_id                 = 1;
    string container_name         = 2;
    string process_name           = 3;
    string process_exec_file_path = 4;
    string process_args           = 5;
}

